Publish on Maven Central

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-VERSION_NAME=0.1.0
-VERSION_CODE=1
+VERSION_NAME=0.1.1
+VERSION_CODE=2
 GROUP=com.github.eluleci
 
-POM_DESCRIPTION=FlatUI Kit for Android Native Widgets
+POM_DESCRIPTION=FlatUI Kit for Android Widgets
 POM_URL=https://github.com/eluleci/FlatUI
 POM_SCM_URL=https://github.com/eluleci/FlatUI
 POM_SCM_CONNECTION=scm:git@github.com:eluleci/FlatUI.git
