--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ VERSION_NAME=0.1.2
 VERSION_CODE=3
 GROUP=com.github.eluleci
 
-POM_DESCRIPTION=FlatUI Kit for Android Widgets
+POM_DESCRIPTION=FlatUI widgets for Android
 POM_URL=https://github.com/eluleci/FlatUI
 POM_SCM_URL=https://github.com/eluleci/FlatUI
 POM_SCM_CONNECTION=scm:git@github.com:eluleci/FlatUI.git
@@ -11,7 +11,7 @@ POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=eluleci
-POM_DEVELOPER_NAME=Emrullah Lüleci
+POM_DEVELOPER_NAME=Emrullah Luleci
 
 ANDROID_BUILD_TARGET_SDK_VERSION=19
 ANDROID_BUILD_TOOLS_VERSION=19
