--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-VERSION_NAME=2.0.2
-VERSION_CODE=7
+VERSION_NAME=2.0.3
+VERSION_CODE=8
 GROUP=com.github.eluleci
 
 POM_DESCRIPTION=FlatUI widgets for Android
@@ -14,5 +14,5 @@ POM_DEVELOPER_ID=eluleci
 POM_DEVELOPER_NAME=Emrullah Luleci
 
 ANDROID_BUILD_TARGET_SDK_VERSION=19
-ANDROID_BUILD_TOOLS_VERSION=19
+ANDROID_BUILD_TOOLS_VERSION=19.1.0
 ANDROID_BUILD_SDK_VERSION=19
